# Personal-Fine-Tuning-Engine

./: .gitignore  ENGINE_DEV_DOC.md  LICENSE  Makefile  PROFILE_SYSTEM_README.md  README.md  README.zh-CN.md  pyproject.toml
docs/: 01-overview.md  02-architecture.md  03-module-design.md  04-roadmap.md  05-tech-and-risk.md  06-handoff-2026-03-24.md  07-development-roadmap-v2.md  08-handoff-2026-04-08.md  09-data-layering-strategy.md  12-clean-git-first-release.md  README.md  dpo_training.md
examples/: pfe_closed_loop_client.mjs  pfe_closed_loop_client.py
tests/: conftest.py  matrix_test_compat.py  test_adapter_artifact_consistency.py  test_adapter_lineage.py  test_audit_trail.py  test_auto_eval_gate_phase1.py  test_auto_loop_policy_config.py  test_auto_rollback.py  test_auto_trigger_http_controls.py  test_auto_trigger_phase1.py  test_auto_trigger_reset_retry.py  test_auto_trigger_status.py  test_candidate_promote_archive_surface.py  test_candidate_summary_and_queue.py  test_candidate_summary_surface.py  test_candidate_timeline_http_surface.py  test_candidate_timeline_surface.py  test_chat_candidate_timeline_surface.py  test_chat_collector.py  test_chat_daemon_health_surface.py  test_chat_daemon_recovery_timeline_surface.py  test_chat_operations_event_stream_surface.py  test_chat_ops_alerts_surface.py  test_chat_ops_console_surface.py  test_chat_ops_console_unified_panel.py  test_chat_worker_runner_timeline_surface.py  test_cli_closed_loop_smoke.py  test_cli_console_surface.py  test_cli_doctor.py  test_cli_formatting_matrix.py  test_cli_operations_console_digest.py  test_cli_ops_views.py  test_cli_real_execution_summary.py  test_closed_loop_observability.py  test_conflict_detector.py  test_daemon_health_surface.py  test_daemon_recovery_timeline_surface.py  test_dashboard.py  (+70 more)
(+106 files in other folders)
